# sortition-algorithms

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  analyze.py  analyze_maximin.py  animated-common-algorithm.html  animated-intro.html  animated-legacy-algorithm.html  animated-maximin-algorithm.html  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  security.yml  validate-codecov-config.yml
adapters/: index.html
advanced/: index.html
agent/: index.html
agent/progress-refactor-plan/: index.html
analysis/: sf_c_44_stats.txt  sf_e_110_stats.txt
api-reference/: index.html
benchmark_results/: index.html
benchmarking/: index.html
benchmarks/: README.md  __init__.py  anonymize_data.py  generate_fixtures.py  memray_profile.py  profile_solvers.py
cli/: index.html
concepts/: index.html
docs/: adapters.md  advanced.md  animated-common-algorithm.html  animated-intro.html  animated-legacy-algorithm.html  animated-maximin-algorithm.html  api-reference.md  benchmark_results.md  benchmarking.md  cli.md  concepts.md  i18n.md  index.md  modules.md  progress.md  pypi-trusted-publisher-setup.md  quickstart.md  usage.md  walkthrough.md
docs/agent/: README.md  progress-refactor-plan.md
i18n/: index.html
modules/: index.html
progress/: index.html
pypi-trusted-publisher-setup/: index.html
quickstart/: index.html
search/: search_index.json
src/sortition_algorithms/: __init__.py  __main__.py  adapters.py  committee_generation.py  core.py  error_messages.py  errors.py  features.py  find_sample.py  people.py  people_features.py  progress.py  progress_rich.py  report_messages.py  settings.py  utils.py
src/sortition_algorithms/committee_generation/: __init__.py  common.py  diversimax.py  legacy.py  leximin.py  maximin.py  nash.py  newleximin.py  og_leximin.py  op1_leximin.py  op2_leximin.py  op4_leximin.py  solver.py
tests/: helpers.py  test_adapters.py  test_cli.py  test_committee_generation.py  test_core.py  test_errors_pickle.py  test_features.py  test_find_sample.py  test_foo.py  test_legacy.py  test_people.py  test_people_features.py  test_progress.py  test_report_messages.py  test_run_report.py  test_settings.py  test_solver.py  test_utils.py
tests/fixtures/: candidates.csv  candidates_lower.csv  features.csv
walkthrough/: index.html
