[project]
name = "sortition-algorithms"
version = "0.10.1"
description = "A package containing algorithms for sortition - democratic lotteries."
authors = [
  { name = "Hamish Downer (Sortition Foundation)", email = "hamish@sortitionfoundation.org" },
  { name = "Brett Hennig (Sortition Foundation)", email = "brett@sortitionfoundation.org" },
  { name = "Nick Gill (Sortition Foundation)", email = "nick@sortitionfoundation.org" },
  { name = "Paul Gölz", email = "pgoelz@cs.cmu.edu" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<3.13"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "attrs>=25.4.0",
  "cattrs>=25.1.0",
  "cvxpy>=1.6.5",
  "gspread>=6.2.1",
  "mip==1.15.0",
  "numpy>=2.3.4",
  "oauth2client>=4.1.3",
  "requests>=2.32.0",
  "tabulate>=0.9.0",
]

[project.scripts]
sortition = "sortition_algorithms.__main__:cli"

[project.urls]
Homepage = "https://sortitionfoundation.github.io/sortition-algorithms/"
Repository = "https://github.com/sortitionfoundation/sortition-algorithms"
Documentation = "https://sortitionfoundation.github.io/sortition-algorithms/"

[project.optional-dependencies]
gurobi = ["gurobipy>=12.0.2"]
cli = ["click>=8.2.1"]

[dependency-groups]
dev = [
  "pytest>=7.2.0",
  "pre-commit>=2.20.0",
  "tox-uv>=1.11.3",
  "deptry>=0.24.0",
  "mypy>=0.991",
  "pytest-cov>=4.0.0",
  "ruff>=0.11.5",
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.26.1",
  "types-tabulate>=0.9.0.20241207",
  "tomli-w>=1.2.0",
  "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sortition_algorithms"]

[tool.uv]
# this provides a "cooldown" to avoid supply chain issues - requires uv>=0.9.17
# background: https://blog.yossarian.net/2025/11/21/We-should-all-be-using-dependency-cooldowns
exclude-newer = "1 week"
exclude-newer-package = { uv = "0 days" }

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# mip does not have type hints/stubs
[[tool.mypy.overrides]]
module = "mip.*"
ignore_missing_imports = true
ignore_errors = true

# gurobipy is commercial so we can't even install it
[[tool.mypy.overrides]]
module = "gurobipy.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "oauth2client.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "sortition_algorithms.committee_generation.*"
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: mark tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  # TODO: re-enable later
  # "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # use assert in non-test code
  "S101",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.typos.default.extend-words]
# used for 'strat select' - short for stratification
strat = "strat"
# string in a test is BA10
BA = "BA"
